--- a/animeweeb/login/templates/login/login.html
+++ b/animeweeb/login/templates/login/login.html
@@ -1,6 +1,6 @@
 {% extends 'login/base.html' %}
 {% block content %}
-<div style="background-image: url(https://assets3.thrillist.com/v1/image/2855064/size/gn-gift_guide_variable_c_2x.jpg); height: 91vh;">
+<div style="background-image: url(https://images.alphacoders.com/605/605592.png);height: 91vh; background-size: cover;">
     <div class="container">
         <div class="row justify-content-center">
             <div class="row borderstyle" style=" width: 50%;">
