--- a/animeweeb/login/templates/login/base.html
+++ b/animeweeb/login/templates/login/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Anime Weeb</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <style>
@@ -26,9 +27,6 @@
         box-shadow: 0px 0px 10px 0px #000;
         text-align: center;
     }
-    .navbar{
-        background-color: transparent :important;
-    }
     </style>
 </head>
 <body>
@@ -40,13 +38,13 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/lib">library</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'login' %}">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'register' %}">Register</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/movies/upload">Upload anime</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}">
@@ -59,6 +57,5 @@
     {% block content %}
   
     {% endblock  %}
-        
 </body>
 </html>
