--- a/animeweeb/login/templates/login/register.html
+++ b/animeweeb/login/templates/login/register.html
@@ -1,11 +1,12 @@
 {% extends 'login/base.html' %}
 {% block content %}
-<div class="container borderstyle">
+<div style="background-image: url(https://m.media-amazon.com/images/M/MV5BOTdkYTI4NzUtZGE2YS00NDM5LTk1YzAtMzZiNGY1MjViNWNiXkEyXkFqcGdeQXVyMzgxODM4NjM@._V1_.jpg);height: 91vh; background-size: cover;">
+<div class="container bother" style="padding: 45px;border-radius: 10px;box-shadow: 0px 0px 10px 0px #000; text-align: center;">
     <div class="row">
         <div class="col-12">
             <form method="POST">
                 {% csrf_token %}
-                <div style="padding-bottom: 30px; color: blue;">
+                <div style="padding-bottom: 30px; color:#76D36B;">
                     <h1>Register Form</h1>
                 </div>
 
@@ -55,15 +56,14 @@
                         <input type="text" class="form-control" name="address">
                     </div>
                 </div>
-
                 <div class="form-group row">
                     <div class="col-md-4">
-                        <button type="submit" class="btn btn-primary">Sign Up</button>
+                        <button type="submit" class="btn btn-primary" style="background-color: #76D36B; float: right; padding: 10px; margin-top: 10%;">Sign Up</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
 </div>
-
+</div>
 {% endblock %}
