--- a/animeweeb/login/templates/login/animelist.html
+++ b/animeweeb/login/templates/login/animelist.html
@@ -7,39 +7,32 @@
 
 
 {% block content %}
-    <div class="con">
-      <div>
-        {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <div align="center" {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
-            {% endfor %}
-        </ul>
-        {% endif %}
-      </div>
-        <table class="table table-hover">
-            <thead>
-              <tr>
-                <th scope="col">Anime</th>
-                <th scope="col">Description</th>
-                <th scope="col">Edit</th>
-                <th scope="col">Delete</th>
-              </tr>
-            </thead>
-            <tbody>
-        {% for obj in anime %}
-        
-            
-              <tr>
-                <th><a href="https://www.youtube.com/watch?v=3Yc7TVZo3h0" target="_blank">{{obj.Anime_title}}</a></th>
-                <td>{{ obj.Anime_description}}</td>
-                <td><a href="{% url 'edit_anime' obj.id %}">Edit</a></td>
-                <td><a href="{% url 'delete_anime' obj.id %}">Delete</a></td>
-              </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://c4.wallpaperflare.com/wallpaper/617/733/79/anime-anime-girls-aoi-ogata-wallpaper-preview.jpg" alt="First slide">
     </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://wallpapercave.com/wp/wp4326744.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://steamuserimages-a.akamaihd.net/ugc/965355694153813552/DCF8A0D1955D833D1C5C3E2412CC84FBC88C885D/" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 {% endblock content %}
     
     
