--- a/animeweeb/login/templates/login/register.html
+++ b/animeweeb/login/templates/login/register.html
@@ -1,6 +1,6 @@
 {% extends 'login/base.html' %}
 {% block content %}
-<div style="background-image: url(https://m.media-amazon.com/images/M/MV5BOTdkYTI4NzUtZGE2YS00NDM5LTk1YzAtMzZiNGY1MjViNWNiXkEyXkFqcGdeQXVyMzgxODM4NjM@._V1_.jpg);height: 91vh; background-size: cover;">
+<div style="background-image: url(https://wallpaperaccess.com/full/222280.jpg);height: 91vh; background-size: cover;">
 <div class="container bother" style="padding: 45px;border-radius: 10px;box-shadow: 0px 0px 10px 0px #000; text-align: center;">
     <div class="row">
         <div class="col-12">
@@ -11,47 +11,47 @@
                 </div>
 
                 <div class="form-row">
-                    <div class="form-group col-md-4" style="padding-right: 40px;">
+                    <div class="form-group col-md-4" style="padding-right: 40px; color: white;">
                         <label>First Name</label>
                         <input type="text" class="form-control" name="first_name">
                     </div>
-                    <div class="form-group col-md-4" style="padding-right: 40px;">
+                    <div class="form-group col-md-4" style="padding-right: 40px; color: white;">
                         <label>Last Name</label>
                         <input type="text" class="form-control" name="last_name">
                     </div>
                 </div>
 
                 <div class="form-row">
-                    <div class="form-group col-md-4" style="padding-right: 40px;">
+                    <div class="form-group col-md-4" style="padding-right: 40px; color: white;">
                         <label>Username</label>
                         <input type="text" class="form-control" name="username">
                     </div>
                 </div>
 
                 <div class="form-row">
-                    <div class="form-group col-md-4" style="padding-right: 40px;">
+                    <div class="form-group col-md-4" style="padding-right: 40px; color: white;">
                         <label>Email Address</label>
                         <input type="email" class="form-control" name="email">
                     </div>
                 </div>
 
                 <div class="form-row">
-                    <div class="form-group col-md-4" style="padding-right: 40px;">
+                    <div class="form-group col-md-4" style="padding-right: 40px; color: white;">
                         <label>Password</label>
                         <input type="password" class="form-control" name="password1">
                     </div>
-                    <div class="form-group col-md-4" style="padding-right: 40px;">
+                    <div class="form-group col-md-4" style="padding-right: 40px; color: white;">
                         <label>Confirm Password</label>
                         <input type="password" class="form-control" name="password2">
                     </div>
                 </div>
 
                 <div class="form-row">
-                    <div class="form-group col-md-4" style="padding-right: 40px;">
+                    <div class="form-group col-md-4" style="padding-right: 40px; color: white;">
                         <label>Age</label>
                         <input type="number" class="form-control" name="age">
                     </div>
-                    <div class="form-group col-md-4" style="padding-right: 40px;">
+                    <div class="form-group col-md-4" style="padding-right: 40px; color: white;">
                         <label>Address</label>
                         <input type="text" class="form-control" name="address">
                     </div>
