--- a/animeweeb/login/templates/login/animelist.html
+++ b/animeweeb/login/templates/login/animelist.html
@@ -7,31 +7,179 @@
 
 
 {% block content %}
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="https://c4.wallpaperflare.com/wallpaper/617/733/79/anime-anime-girls-aoi-ogata-wallpaper-preview.jpg" alt="First slide">
+<div class="slider" style="margin-top: 0px;">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" style="height:822px;">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="https://c4.wallpaperflare.com/wallpaper/809/360/987/bleach-zaraki-kenpachi-kon-1024x768-anime-bleach-hd-art-wallpaper-preview.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://images4.alphacoders.com/859/859921.png" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://wallpaperaccess.com/full/412204.png" alt="Third slide">
+      </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://wallpapercave.com/wp/wp4326744.jpg" alt="Second slide">
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+<div class="card w-50" style="width: 400px;margin:0 auto;background-color: #302f2f; margin-top: 50px; margin-bottom: 100px;">
+  <div class="card-body">
+    <h5 class="card-title" style="color: wheat;">Trending Animes</h5>
+    <div class="card mb-3" style="max-width: 800px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+        <a href=""><img src="https://assets3.thrillist.com/v1/image/2855064/size/gn-gift_guide_variable_c.jpg" class="card-img" alt="..." style="padding-top: 3px; padding-left: 3px;"></a>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Demon Slayer</h5>
+            <p class="card-text">Demon Slayer: Kimetsu no Yaiba is a Japanese manga series written and illustrated by Koyoharu Gotōge..</p>
+            <p class="card-text"><small class="text-muted">Last updated 5 days ago</small></p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://steamuserimages-a.akamaihd.net/ugc/965355694153813552/DCF8A0D1955D833D1C5C3E2412CC84FBC88C885D/" alt="Third slide">
+    <div class="card mb-3" style="max-width: 800px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+        <a href=""><img src="https://news.otakukart.com/wp-content/uploads/2020/01/Solo-Leveling-Chapter-101-Release-Date-Raw-Scans-and-Spoilers-scaled.jpg" class="card-img" alt="..." style="padding-top: 3px; padding-left: 3px;"></a>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Solo leverling</h5>
+            <p class="card-text">Solo Leveling is a Korean novel written by Chu-Gong, It was serialized in Papyrus and later in KakaoPage.</p>
+            <p class="card-text"><small class="text-muted">Last updated 20 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-3" style="max-width: 800px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <a href="">  <img src="https://cdn.wallpapersafari.com/72/92/zDQsdo.jpg" class="card-img" alt="..." style="padding-top: 3px; padding-left: 3px;"></a>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Bleach </h5>
+            <p class="card-text">Ichigo Kurosaki never asked for the ability to see ghosts he was born with the gift. When his family is attacked by a Hollow Ichigo becomes a Soul Reaper</p>
+            <p class="card-text"><small class="text-muted">Last updated 6 years ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-3" style="max-width: 800px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <a href="">  <img src="https://mixm.io/x/166/hd-high-resolution-wallpaper-goku-mastered-perfect-ultra-instinct-dragon-ball-super-z711-4k-8k-flipped-background.jpg" class="card-img" alt="..." style="padding-top: 3px; padding-left: 3px;"></a>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Dragon ball super </h5>
+            <p class="card-text">Dragon Ball is a Japanese media franchise created by Akira Toriyama in 1984. The initial manga, written and illustrated by Toriyama</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 months ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-3" style="max-width: 800px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <a href="">  <img src="https://wallpaperaccess.com/full/382598.jpg" class="card-img" alt="..." style="padding-top: 3px; padding-left: 3px;"></a>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Haikyuu!!! </h5>
+            <p class="card-text">Haikyu!! is a Japanese shōnen manga series written and illustrated by Haruichi Furudate.Individual chapters have been serialized in Weekly Shōnen Jump.</p>
+            <p class="card-text"><small class="text-muted">Last updated 2 days ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-3" style="max-width: 800px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <a href="">  <img src="https://wallpapercave.com/wp/wp4089702.jpg" class="card-img" alt="..." style="padding-top: 3px; padding-left: 3px;"></a>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">I Want To Eat Your Pancrea </h5>
+            <p class="card-text">An aloof boy comes across a book in a hospital waiting room. He soon discovers that it is a diary kept by his very popular classmate (SPOILER).</p>
+            <p class="card-text"><small class="text-muted">Last updated 120 days ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-3" style="max-width: 800px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <a href="">  <img src="https://wallpaperplay.com/walls/full/9/6/b/9888.jpg" class="card-img" alt="..." style="padding-top: 3px; padding-left: 3px;"></a>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Erased </h5>
+            <p class="card-text">Erased, known in Japan as Boku dake ga Inai Machi, is a Japanese manga series written and illustrated by Kei Sanbe.</p>
+            <p class="card-text"><small class="text-muted">Last updated 4 years ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-3" style="max-width: 800px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <a href="">  <img src="https://wallpaperboat.com/wp-content/uploads/2019/09/black-clover-Wallpaper-1920x1080.jpg" class="card-img" alt="..." style="padding-top: 3px; padding-left: 3px;"></a>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Black Clover </h5>
+            <p class="card-text">Black Clover is a Japanese manga series written and illustrated by Yūki Tabata. It has been serialized in Shueisha's Weekly Shōnen.</p>
+            <p class="card-text"><small class="text-muted">Last updated 10 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-3" style="max-width: 800px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <a href="">  <img src="https://wallpapercave.com/wp/wp1874038.png" class="card-img" alt="..." style="padding-top: 3px; padding-left: 3px;"></a>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">My Hero Academia </h5>
+            <p class="card-text">My Hero Academia is a Japanese superhero manga series written and illustrated by Kōhei Horikoshi. It has been serialized in Weekly Shōnen Jump.</p>
+            <p class="card-text"><small class="text-muted">Last updated 4 days ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-3" style="max-width: 800px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <a href="Anime/video/Anime/Its_been_real_but_Im_out.mp4">  <img src="https://img5.goodfon.com/wallpaper/nbig/a/94/anime-2016-koe-no-katachi-a-silent-voice-forma-golosa-dvoe-1.jpg" class="card-img" alt="..." style="padding-top: 3px; padding-left: 3px;"></a>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">A Silent Voice </h5>
+            <p class="card-text">TWhen a grade school student with impaired hearing is bullied mercilessly, she transfers to another school. Years later.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
 {% endblock content %}
     
