--- a/animeweeb/login/templates/login/base.html
+++ b/animeweeb/login/templates/login/base.html
@@ -67,13 +67,13 @@
           <ul class="navbar-nav">
               <a class="nav-link" href="/">Home</a>
               <a class="nav-link" href="/lib">library</a>
-              {% block login/register %}
-        
+              
         {% if not request.user.is_authenticated %}
           <a class="nav-link" href="{% url 'login' %}">Login</a>
           <a class="nav-link" href="{% url 'register' %}">Register</a>
+        {% else %}
+        <a class="nav-link" href="/members">Profile-[{{request.user.username|title}}]</a>
         {% endif %}
-      {% endblock login/register %}
       </ul>
         </div>
       </nav> 
