--- a/animeweeb/login/templates/login/animelist.html
+++ b/animeweeb/login/templates/login/animelist.html
@@ -16,15 +16,13 @@
     </ol>
     <div class="carousel-inner" style="height:822px;">
       <div class="carousel-item active">
-        <img class="d-block w-100"
-          src="https://c4.wallpaperflare.com/wallpaper/809/360/987/bleach-zaraki-kenpachi-kon-1024x768-anime-bleach-hd-art-wallpaper-preview.jpg"
-          alt="First slide">
+        <img class="d-block w-100"src='/static/kenpachi.jpg/'alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://images4.alphacoders.com/859/859921.png" alt="Second slide">
+        <img class="d-block w-100" src='/static/seven.png/' alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://wallpaperaccess.com/full/412204.png" alt="Third slide">
+        <img class="d-block w-100" src='/static/hy.png/' alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -42,15 +40,14 @@
   style="width: 400px;margin:0 auto;background-color: #302f2f; margin-top: 50px; margin-bottom: 100px;">
   <div class="card-body">
     <h5 class="card-title" style="color: wheat;">Animes</h5>
-    
+
     {% for anime in animes %}
     <div class="card mb-3" style="max-width: 800px;">
       <div class="row no-gutters">
         <div class="col-md-4">
           <a href="{{anime.Anime_file.url}}" target="_blank">
-            <img
-              src="/static/play.jpg/"
-              class="card-img img-fluid" alt="..." style="padding-top: 3px; padding-left: 3px; max-width: 86%;">
+            <img src="/static/play.jpg/" class="card-img img-fluid" alt="..."
+              style="padding-top: 3px; padding-left: 3px; max-width: 86%;">
           </a>
         </div>
         <div class="col-md-8">
@@ -62,8 +59,8 @@
       </div>
     </div>
     {% endfor %}
-      
-    
+
+
   </div>
 </div>
 {% endblock content %}
